add footer icons and initial style to lastTransactions component

--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,18 @@
       -moz-appearance: textfield;
   }
 }
+
+@layer utilities {
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+      display: none;
+  }
+ /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+      -ms-overflow-style: none;  /* IE and Edge */
+      scrollbar-width: none;  /* Firefox */
+}
+}
+  html {
+    /* background-color: rgb(17, 24, 39); */
+  }
